// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel component renders correctly 1`] = `
<CustomCarousel
  autoplay={true}
  legendPosition="left"
>
  <div
    className="carousel"
  >
    <Slider
      appendDots={[Function]}
      autoplay={true}
      autoplaySpeed={3000}
      className="slide"
      cssEase="ease-in"
      dots={true}
      dotsClass="slick-dots"
      fade={true}
      infinite={true}
      onChange={[Function]}
      pauseOnDotsHover={true}
      pauseOnFocus={true}
      pauseOnHover={false}
      selectedItem={1}
      slidesToScroll={3}
      slidesToShow={1}
      speed={3000}
      touchThreshold={100}
    >
      <InnerSlider
        accessibility={true}
        adaptiveHeight={false}
        afterChange={null}
        appendDots={[Function]}
        arrows={true}
        autoplay={true}
        autoplaySpeed={3000}
        beforeChange={null}
        centerMode={false}
        centerPadding="50px"
        className="slide"
        cssEase="ease-in"
        customPaging={[Function]}
        dots={true}
        dotsClass="slick-dots"
        draggable={true}
        easing="linear"
        edgeFriction={0.35}
        fade={true}
        focusOnSelect={false}
        infinite={true}
        initialSlide={0}
        lazyLoad={null}
        nextArrow={null}
        onChange={[Function]}
        onEdge={null}
        onInit={null}
        onLazyLoadError={null}
        onReInit={null}
        pauseOnDotsHover={true}
        pauseOnFocus={true}
        pauseOnHover={false}
        prevArrow={null}
        responsive={null}
        rows={1}
        rtl={false}
        selectedItem={1}
        slide="div"
        slidesPerRow={1}
        slidesToScroll={1}
        slidesToShow={1}
        speed={3000}
        swipe={true}
        swipeEvent={null}
        swipeToSlide={false}
        touchMove={true}
        touchThreshold={100}
        useCSS={true}
        useTransform={true}
        variableWidth={false}
        vertical={false}
        waitForAnimate={true}
      >
        <div
          className="slick-slider slide slick-initialized"
          dir="ltr"
        >
          <PrevArrow
            centerMode={false}
            clickHandler={[Function]}
            currentSlide={0}
            infinite={true}
            nextArrow={null}
            prevArrow={null}
            slideCount={4}
            slidesToShow={1}
          >
            <button
              className="slick-arrow slick-prev"
              data-role="none"
              key="0"
              onClick={[Function]}
              style={
                Object {
                  "display": "block",
                }
              }
              type="button"
            >
               
              Previous
            </button>
          </PrevArrow>
          <div
            className="slick-list"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={null}
            onMouseMove={null}
            onMouseUp={[Function]}
            onTouchCancel={null}
            onTouchEnd={[Function]}
            onTouchMove={null}
            onTouchStart={[Function]}
            style={Object {}}
          >
            <Track
              centerMode={false}
              centerPadding="50px"
              cssEase="ease-in"
              currentSlide={0}
              fade={true}
              focusOnSelect={null}
              infinite={true}
              lazyLoad={null}
              lazyLoadedList={Array []}
              listHeight={0}
              onMouseEnter={null}
              onMouseLeave={null}
              onMouseOver={null}
              rtl={false}
              slideCount={4}
              slideHeight={0}
              slideWidth={0}
              slidesToScroll={1}
              slidesToShow={1}
              speed={3000}
              trackStyle={
                Object {
                  "opacity": 1,
                }
              }
              variableWidth={false}
              vertical={false}
            >
              <div
                className="slick-track"
                onMouseEnter={null}
                onMouseLeave={null}
                onMouseOver={null}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <div
                  aria-hidden={false}
                  className="slick-slide slick-active slick-current"
                  data-index={0}
                  key="original0"
                  onClick={[Function]}
                  style={
                    Object {
                      "WebkitTransition": "opacity 3000ms ease-in, visibility 3000ms ease-in",
                      "left": -0,
                      "opacity": 1,
                      "outline": "none",
                      "position": "relative",
                      "transition": "opacity 3000ms ease-in, visibility 3000ms ease-in",
                      "width": 0,
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    key="0"
                  >
                    <div
                      key="0"
                      style={
                        Object {
                          "display": "inline-block",
                          "width": "100%",
                        }
                      }
                      tabIndex={-1}
                    >
                      <p
                        className="legend left"
                      >
                        Safari Meeting Room, Andela New York
                      </p>
                      <img
                        alt="Safari Meeting Room, Andela New York"
                        src="test-file-stub"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden={true}
                  className="slick-slide"
                  data-index={1}
                  key="original1"
                  onClick={[Function]}
                  style={
                    Object {
                      "WebkitTransition": "opacity 3000ms ease-in, visibility 3000ms ease-in",
                      "left": -0,
                      "opacity": 0,
                      "outline": "none",
                      "position": "relative",
                      "transition": "opacity 3000ms ease-in, visibility 3000ms ease-in",
                      "width": 0,
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    key="11"
                  >
                    <div
                      key="111"
                      style={
                        Object {
                          "display": "inline-block",
                          "width": "100%",
                        }
                      }
                      tabIndex={-1}
                    >
                      <p
                        className="legend left"
                      >
                        Cognitio Meeting Room, Andela Lagos
                      </p>
                      <img
                        alt="Cognitio Meeting Room, Andela Lagos"
                        src="test-file-stub"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden={true}
                  className="slick-slide"
                  data-index={2}
                  key="original2"
                  onClick={[Function]}
                  style={
                    Object {
                      "WebkitTransition": "opacity 3000ms ease-in, visibility 3000ms ease-in",
                      "left": -0,
                      "opacity": 0,
                      "outline": "none",
                      "position": "relative",
                      "transition": "opacity 3000ms ease-in, visibility 3000ms ease-in",
                      "width": 0,
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    key="22"
                  >
                    <div
                      key="222"
                      style={
                        Object {
                          "display": "inline-block",
                          "width": "100%",
                        }
                      }
                      tabIndex={-1}
                    >
                      <p
                        className="legend left"
                      >
                        Entebbe Meeting Room, Andela Kampala
                      </p>
                      <img
                        alt="Entebbe Meeting Room, Andela Kampala"
                        src="test-file-stub"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden={true}
                  className="slick-slide"
                  data-index={3}
                  key="original3"
                  onClick={[Function]}
                  style={
                    Object {
                      "WebkitTransition": "opacity 3000ms ease-in, visibility 3000ms ease-in",
                      "left": -0,
                      "opacity": 0,
                      "outline": "none",
                      "position": "relative",
                      "transition": "opacity 3000ms ease-in, visibility 3000ms ease-in",
                      "width": 0,
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    key="33"
                  >
                    <div
                      key="333"
                      style={
                        Object {
                          "display": "inline-block",
                          "width": "100%",
                        }
                      }
                      tabIndex={-1}
                    >
                      <p
                        className="legend left"
                      >
                        Banku Meeting Room, Andela Lagos
                      </p>
                      <img
                        alt="Banku Meeting Room, Andela Lagos"
                        src="test-file-stub"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </Track>
          </div>
          <NextArrow
            centerMode={false}
            clickHandler={[Function]}
            currentSlide={0}
            infinite={true}
            nextArrow={null}
            prevArrow={null}
            slideCount={4}
            slidesToShow={1}
          >
            <button
              className="slick-arrow slick-next"
              data-role="none"
              key="1"
              onClick={[Function]}
              style={
                Object {
                  "display": "block",
                }
              }
              type="button"
            >
               
              Next
            </button>
          </NextArrow>
          <Dots
            appendDots={[Function]}
            clickHandler={[Function]}
            currentSlide={0}
            customPaging={[Function]}
            dotsClass="slick-dots"
            infinite={true}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            slideCount={4}
            slidesToScroll={1}
            slidesToShow={1}
          >
            <div
              className="slick-dots"
              id="adjust-dots"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
            >
              <ul>
                 
                <li
                  className="slick-active"
                  key="0"
                >
                  <button
                    onClick={[Function]}
                  >
                    1
                  </button>
                </li>
                <li
                  className=""
                  key="1"
                >
                  <button
                    onClick={[Function]}
                  >
                    2
                  </button>
                </li>
                <li
                  className=""
                  key="2"
                >
                  <button
                    onClick={[Function]}
                  >
                    3
                  </button>
                </li>
                <li
                  className=""
                  key="3"
                >
                  <button
                    onClick={[Function]}
                  >
                    4
                  </button>
                </li>
                 
              </ul>
            </div>
          </Dots>
        </div>
      </InnerSlider>
    </Slider>
  </div>
</CustomCarousel>
`;

exports[`Carousel component renders correctly 2`] = `
<CustomCarousel
  autoplay={true}
  legendPosition="left"
>
  <div
    className="carousel"
  >
    <Slider
      appendDots={[Function]}
      autoplay={true}
      autoplaySpeed={3000}
      className="slide"
      cssEase="ease-in"
      dots={true}
      dotsClass="slick-dots"
      fade={true}
      infinite={true}
      onChange={[Function]}
      pauseOnDotsHover={true}
      pauseOnFocus={true}
      pauseOnHover={false}
      selectedItem={0}
      slidesToScroll={3}
      slidesToShow={1}
      speed={3000}
      touchThreshold={100}
    >
      <InnerSlider
        accessibility={true}
        adaptiveHeight={false}
        afterChange={null}
        appendDots={[Function]}
        arrows={true}
        autoplay={true}
        autoplaySpeed={3000}
        beforeChange={null}
        centerMode={false}
        centerPadding="50px"
        className="slide"
        cssEase="ease-in"
        customPaging={[Function]}
        dots={true}
        dotsClass="slick-dots"
        draggable={true}
        easing="linear"
        edgeFriction={0.35}
        fade={true}
        focusOnSelect={false}
        infinite={true}
        initialSlide={0}
        lazyLoad={null}
        nextArrow={null}
        onChange={[Function]}
        onEdge={null}
        onInit={null}
        onLazyLoadError={null}
        onReInit={null}
        pauseOnDotsHover={true}
        pauseOnFocus={true}
        pauseOnHover={false}
        prevArrow={null}
        responsive={null}
        rows={1}
        rtl={false}
        selectedItem={0}
        slide="div"
        slidesPerRow={1}
        slidesToScroll={1}
        slidesToShow={1}
        speed={3000}
        swipe={true}
        swipeEvent={null}
        swipeToSlide={false}
        touchMove={true}
        touchThreshold={100}
        useCSS={true}
        useTransform={true}
        variableWidth={false}
        vertical={false}
        waitForAnimate={true}
      >
        <div
          className="slick-slider slide slick-initialized"
          dir="ltr"
        >
          <PrevArrow
            centerMode={false}
            clickHandler={[Function]}
            currentSlide={0}
            infinite={true}
            nextArrow={null}
            prevArrow={null}
            slideCount={4}
            slidesToShow={1}
          >
            <button
              className="slick-arrow slick-prev"
              data-role="none"
              key="0"
              onClick={[Function]}
              style={
                Object {
                  "display": "block",
                }
              }
              type="button"
            >
               
              Previous
            </button>
          </PrevArrow>
          <div
            className="slick-list"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={null}
            onMouseMove={null}
            onMouseUp={[Function]}
            onTouchCancel={null}
            onTouchEnd={[Function]}
            onTouchMove={null}
            onTouchStart={[Function]}
            style={Object {}}
          >
            <Track
              centerMode={false}
              centerPadding="50px"
              cssEase="ease-in"
              currentSlide={0}
              fade={true}
              focusOnSelect={null}
              infinite={true}
              lazyLoad={null}
              lazyLoadedList={Array []}
              listHeight={0}
              onMouseEnter={null}
              onMouseLeave={null}
              onMouseOver={null}
              rtl={false}
              slideCount={4}
              slideHeight={0}
              slideWidth={0}
              slidesToScroll={1}
              slidesToShow={1}
              speed={3000}
              trackStyle={
                Object {
                  "opacity": 1,
                }
              }
              variableWidth={false}
              vertical={false}
            >
              <div
                className="slick-track"
                onMouseEnter={null}
                onMouseLeave={null}
                onMouseOver={null}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <div
                  aria-hidden={false}
                  className="slick-slide slick-active slick-current"
                  data-index={0}
                  key="original0"
                  onClick={[Function]}
                  style={
                    Object {
                      "WebkitTransition": "opacity 3000ms ease-in, visibility 3000ms ease-in",
                      "left": -0,
                      "opacity": 1,
                      "outline": "none",
                      "position": "relative",
                      "transition": "opacity 3000ms ease-in, visibility 3000ms ease-in",
                      "width": 0,
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    key="0"
                  >
                    <div
                      key="0"
                      style={
                        Object {
                          "display": "inline-block",
                          "width": "100%",
                        }
                      }
                      tabIndex={-1}
                    >
                      <p
                        className="legend left"
                      >
                        Safari Meeting Room, Andela New York
                      </p>
                      <img
                        alt="Safari Meeting Room, Andela New York"
                        src="test-file-stub"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden={true}
                  className="slick-slide"
                  data-index={1}
                  key="original1"
                  onClick={[Function]}
                  style={
                    Object {
                      "WebkitTransition": "opacity 3000ms ease-in, visibility 3000ms ease-in",
                      "left": -0,
                      "opacity": 0,
                      "outline": "none",
                      "position": "relative",
                      "transition": "opacity 3000ms ease-in, visibility 3000ms ease-in",
                      "width": 0,
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    key="11"
                  >
                    <div
                      key="111"
                      style={
                        Object {
                          "display": "inline-block",
                          "width": "100%",
                        }
                      }
                      tabIndex={-1}
                    >
                      <p
                        className="legend left"
                      >
                        Cognitio Meeting Room, Andela Lagos
                      </p>
                      <img
                        alt="Cognitio Meeting Room, Andela Lagos"
                        src="test-file-stub"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden={true}
                  className="slick-slide"
                  data-index={2}
                  key="original2"
                  onClick={[Function]}
                  style={
                    Object {
                      "WebkitTransition": "opacity 3000ms ease-in, visibility 3000ms ease-in",
                      "left": -0,
                      "opacity": 0,
                      "outline": "none",
                      "position": "relative",
                      "transition": "opacity 3000ms ease-in, visibility 3000ms ease-in",
                      "width": 0,
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    key="22"
                  >
                    <div
                      key="222"
                      style={
                        Object {
                          "display": "inline-block",
                          "width": "100%",
                        }
                      }
                      tabIndex={-1}
                    >
                      <p
                        className="legend left"
                      >
                        Entebbe Meeting Room, Andela Kampala
                      </p>
                      <img
                        alt="Entebbe Meeting Room, Andela Kampala"
                        src="test-file-stub"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden={true}
                  className="slick-slide"
                  data-index={3}
                  key="original3"
                  onClick={[Function]}
                  style={
                    Object {
                      "WebkitTransition": "opacity 3000ms ease-in, visibility 3000ms ease-in",
                      "left": -0,
                      "opacity": 0,
                      "outline": "none",
                      "position": "relative",
                      "transition": "opacity 3000ms ease-in, visibility 3000ms ease-in",
                      "width": 0,
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    key="33"
                  >
                    <div
                      key="333"
                      style={
                        Object {
                          "display": "inline-block",
                          "width": "100%",
                        }
                      }
                      tabIndex={-1}
                    >
                      <p
                        className="legend left"
                      >
                        Banku Meeting Room, Andela Lagos
                      </p>
                      <img
                        alt="Banku Meeting Room, Andela Lagos"
                        src="test-file-stub"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </Track>
          </div>
          <NextArrow
            centerMode={false}
            clickHandler={[Function]}
            currentSlide={0}
            infinite={true}
            nextArrow={null}
            prevArrow={null}
            slideCount={4}
            slidesToShow={1}
          >
            <button
              className="slick-arrow slick-next"
              data-role="none"
              key="1"
              onClick={[Function]}
              style={
                Object {
                  "display": "block",
                }
              }
              type="button"
            >
               
              Next
            </button>
          </NextArrow>
          <Dots
            appendDots={[Function]}
            clickHandler={[Function]}
            currentSlide={0}
            customPaging={[Function]}
            dotsClass="slick-dots"
            infinite={true}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            slideCount={4}
            slidesToScroll={1}
            slidesToShow={1}
          >
            <div
              className="slick-dots"
              id="adjust-dots"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
            >
              <ul>
                 
                <li
                  className="slick-active"
                  key="0"
                >
                  <button
                    onClick={[Function]}
                  >
                    1
                  </button>
                </li>
                <li
                  className=""
                  key="1"
                >
                  <button
                    onClick={[Function]}
                  >
                    2
                  </button>
                </li>
                <li
                  className=""
                  key="2"
                >
                  <button
                    onClick={[Function]}
                  >
                    3
                  </button>
                </li>
                <li
                  className=""
                  key="3"
                >
                  <button
                    onClick={[Function]}
                  >
                    4
                  </button>
                </li>
                 
              </ul>
            </div>
          </Dots>
        </div>
      </InnerSlider>
    </Slider>
  </div>
</CustomCarousel>
`;
